# ai-interview-coach

./: README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/api/: schema.py
backend/core/: database.py  graph.py  nodes.py  prompts.py  schema.py  state.py  utils.py
backend/data/: categories.json
frontend/: .prettierrc  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: answer-input.tsx  app-sidebar.tsx  chat-bubble.tsx  circular-score.tsx  feedback-content.tsx  feedback-tab.tsx  insight-card.tsx  jd-input.tsx  resume-upload.tsx  theme-toggle.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input-group.tsx  input.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx
frontend/src/pages/: HomePage.tsx  InterviewLoading.tsx  InterviewPage.tsx  NotFound.tsx  ReportLoading.tsx  ReportPage.tsx
frontend/src/providers/interview/: context.ts  index.ts  provider.tsx
frontend/src/providers/session/: context.ts  index.ts  provider.tsx
frontend/src/providers/theme/: context.ts  index.ts  provider.tsx
frontend/src/types/: index.ts
