[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary,pool]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]
